# Gorfou

./: .gitignore  MANIFEST.in  README.md  app.py  dev-requirements.txt  grid1.py  grid2.py  grid3.py  input_handler.py  main.js  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  tailwind.config.js  tsconfig.json
Théorique/: choix_technologie.md  choix_technologies.md  diagramme_activite.mdj  diagramme_classe.mdj  liste_fonctionnalités.md  parcours_utilisateur.md  reflexions_concept_profile.md  ressources_utilisées.md
Théorique/fichiers_editables/: Maquette IHM garfou rêvée.fig  Maquette IHM garfou v0.fig  architecture de l'application  diagramme_activite.mdj  diagramme_classe.mdj  schema_organisation_projet.fig
Théorique/markdown/: choix_technologies.md  fonctionnalitées_version_0.md  liste_fonctionnalités.md  parcours_utilisateur.md  reflexions_concept_profile.md  ressources_utilisées.md
UML/: diagramme_cas_d'utilisation.mdj
docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/_sources/: index.rst.txt
partie_creation_edit_notebook/test_solonium/: main.py
python/: app.py  grid1.py  grid3.py  input_handler.py  main_screen.py  title_screen.py
python/gestion_notebook/: note_partie_jupyter.md
python/partie_creation_edit_notebook/: note_partie_jupyter.md
python/partie_creation_edit_notebook/test_solonium/: notebook_test.ipynb
source/: conf.py
src/: final.html  final2.html  importation_donnees.html  index.html  index_tailwind.html  main.html  main.js  main2.html  old-main.html  settings.html  test.html  test_drag_and_drop.html
src/ancienne_vue/: anc_index.html  anc_main.html
src/css/: autre.css  index.css  main.css  style.css  tailwind.css
src/gestion_notebook/: note_partie_jupyter.md  run_jupyter_script.py
src/gestion_notebook/test_solonium/: notebook_test.ipynb
src/gorfou/: grid2.py
src/gorfou_api/: __main__.py  base_notebook.ipynb  gestion_jupyter.py  server.py  test.py
src/gorfou_api/json/: edit_notebook.py
src/gorfou_api/jupyter_interaction/: JupyterServer.py  Modele.py  Notebook.py  Traitement.py  Visualisation.py
src/gorfou_api/notebooks/: default_content.ipynb  default_notebook.ipynb  test_notebook.ipynb
src/gorfou_api/notebooks/.ipynb_checkpoints/: default_content-checkpoint.ipynb  default_notebook-checkpoint.ipynb  test_notebook-checkpoint.ipynb
src/gorfou_api/notebooks/main_nb_project/: main.ipynb
src/gorfou_api/notebooks/temp_nb_project/: temp.ipynb
src/gorfou_api/partie_json/: JupyterServer.py  Notebook.py  base_notebook.ipynb  edit_notebook.py  jupyter_runner.py  preview_selenium.py  preview_test.py  refresher.py  run_jupyter_script.py  tempCodeRunnerFile.py  test_regex.py
src/gorfou_app/: __main__.py  app.py  grid1.py  grid2.py  grid3.py  index.html  index_tailwind.html  main.html  main_screen.py  old-main.html  package-lock.json  package.json  tailwind.config.js  test_tailwind.html  title.css  title_screen.py
src/gorfou_app/css/: input.css  main.css  style.css  tailwind.css  title.css
src/gorfou_app/ts/: test_python.js
src/js/: fonctionalite.js  index.js  main.js  mainApp.js  package.js
src/script/: bouton.js  drag_and_drop.js  example_communication_python.js  importation_donnees.js  index.js  main.js  script.js  test_python.js
src/ts/: bouton.ts  drag_and_drop.ts  example_communication_python.ts  fonctionalite.ts  importation_donnees.ts  index.ts  main.ts  mainApp.ts  script.ts  test_python.js  test_python.ts
tests/: test_Notebook.py  test_Traitement.py
tests/unit/: test_Notebook.py  test_test.py
uml/: usecase
(+1 files in other folders)
