[project]

name = "gorfou"  # Required

version = "0.0.1"

description = "quickly generate good looking notebooks."

readme = "README.md"

requires-python = ">=3.10"

license = {file = "LICENSE.txt"}

keywords = ["notebook", "GUI", "macro"]

authors = [
  {name = "Donat Fortini", email = "author@example.com" }
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
  ".", "src", "gorfou_api"
]
filterwarnings = ["ignore:::.*ansiwrap.core", "ignore:::.*jupyter_client.connect"]
