[metadata]
name = gorfou
version = 0.0.1

description = quickly generate good looking notebooks.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

licence_file = LICENSE

author = Donat Fortini
author_email = blank@mail.com

url = https://github.com/DonatFortini/Projet_developement
project_urls =
    Bug Reports = https://github.com/DonatFortini/Projet_developement/issues
    Source = https://github.com/DonatFortini/Projet_developement

keywords = automatic notebook creation GUI

classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Framework :: Jupyter
    Framework :: IPython
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: French
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]

package_dir =
    = src

packages = find:
include_package_data = True
python_requires = >=3.10, <4
install_requires =
    selenium>=4.8.2
    kivy>=2.1.0
    webdriver_manager>=3.8.5
    notebook>=6.5.2

[options.package.find]
where = src

[options.entry_points]
gui_scripts =
    gorfou = gorfou.__main__:main